# zint-gpl-only

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README  SetPaths.cmake  TODO  cmake_uninstall.cmake.in  readme  readme-cmake  zint-qt.desktop  zint.nsi  zint.spec
backend/: 2of5.c  CMakeLists.txt  DEVELOPER  Makefile  Makefile.bsd  Makefile.mingw  auspost.c  aztec.c  aztec.h  blockf.c  code.c  code1.c  code1.h  code128.c  code16k.c  code49.c  code49.h  common.c  common.h  composite.c  composite.h  dllversion.c  dm200.c  dm200.h  dmatrix.c  dmatrix.h  font.h  gb2312.h  gridmtx.c  gridmtx.h  gs1.c  gs1.h  imail.c  large.c  large.h  library.c  libzint.rc  libzint.so.2.1.3  maxicode.c  maxicode.h  (+29 more)
backend_qt4/: CMakeLists.txt  QtZint2.sln  QtZint2.vcproj  backend_qt4.pro  backend_vc8.pro  barcoderender.cpp  barcoderender.h  compile_n_config  qzint.cpp  qzint.h  readme
cmake/modules/: FindQr.cmake  FindZint.cmake
debian/: changelog  control  copyright  libqzint.install  libzint-dev.install  libzint.install  qzintfrontend.install  rules  zint-qt-devel.install  zint-qt.install  zint.install  zintfrontend.install
docs/: README  appxa.html  appxb.html  appxc.html  appxd.html  backend.html  codesize.txt  composite.html  fourstate.html  frontend.html  index.html  installing.html  introduction.html  legal.html  markings.html  onedim.html  stacked.html  symbologies.html  twodims.html  twotrack.html
frontend/: CMakeLists.txt  Makefile  Makefile.bsd  Makefile.mingw  exttest.c  getopt.c  getopt.h  getopt1.c  main.c  test.sh  zint.rc
frontend_qt4/: CMakeLists.txt  barcodeitem.cpp  barcodeitem.h  datawindow.cpp  datawindow.h  exportwindow.cpp  exportwindow.h  extData.ui  extExport.ui  extSequence.ui  fontend.pro  frontend_qt4.pro  frontend_vc8.pro  grpAztec.ui  grpC128.ui  grpC16k.ui  grpC39.ui  grpC49.ui  grpChannel.ui  grpCodablock.ui  grpCodeOne.ui  grpDBExtend.ui  grpDM.ui  grpGrid.ui  grpMQR.ui  grpMSICheck.ui  grpMaxicode.ui  grpMicroPDF.ui  grpPDF417.ui  grpQR.ui  main.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h  qtZint.sln  qtZint.vcproj  resources.qrc  sequencewindow.cpp  sequencewindow.h
frontend_qt4/images/: .directory
frontend_qt4/res/: .directory  qtZint.rc
win32/: libzint.vcproj  test.bat  zint.sln  zint.vcproj
win32/nsis/: zint.nsi
win32/vsx/: libzintMD.vcxproj
